--- a/styles.css
+++ b/styles.css
@@ -30,6 +30,18 @@ body {
     *{
         color: #fff;
     }
+    .Video-container {
+        position: relative;
+        width: 100%;
+        height: 100%;
+    }
+    
+    #video-background {
+        position: absolute;
+        width: 100%;
+        height: 100vh;
+        object-fit: contain;
+    }
     .container {
         /* display: none; */
         /* min-width: 200px; */
