--- a/styles.css
+++ b/styles.css
@@ -52,30 +52,30 @@ body {
     .container {
         /* display: none; */
         /* min-width: 200px; */
-        padding: 10px;
+        padding: 22px;
         height: 80px;
         position: absolute;
-        background: #9F365D;
-        top: 27%;
+        background: #1D344C;
+        top: 25%;
         left: 50%;
         transform: translate(-50%, -50%);
         z-index: 100;
         font-size: 31.8px;
-        font-weight: 500;
+        /* font-weight: 400; */
     }
    .hero .clock{
-        min-width: 250px;
+        min-width: 280px;
         /* height: 100%; */
-        background: #9F365D;
+        background: #1D344C;
         border-radius: 10px;
         display: flex;
         align-items: center;
         justify-content: center;
     }
     .day{
-        min-width: 250px;
+        min-width: 280px;
         /* height: 100%; */
-        background: #9F365D;
+        background: #1D344C;
         border-radius: 10px;
         display: flex;
         align-items: center;
