--- a/styles.css
+++ b/styles.css
@@ -40,20 +40,23 @@
         object-fit: contain;
     }
     .container {
-       
-        padding: 22px;
+        /* display: none; */
+        /* min-width: 200px; */
+        padding: 15px;
         height: 80px;
         position: absolute;
         background: #1D344C;
-        top: 24%;
+        top: 25%;
         left: 50%;
         transform: translate(-50%, -50%);
         z-index: 100;
         font-size: 31.8px;
-      
+    
+        /* font-weight: 400; */
     }
    .hero .clock{
         min-width: 280px;
+        /* height: 100%; */
         background: #1D344C;
         border-radius: 10px;
         display: flex;
@@ -62,13 +65,14 @@
     }
     .day{
         min-width: 280px;
+        /* height: 100%; */
         background: #1D344C;
         border-radius: 10px;
         display: flex;
         align-items: center;
         justify-content: center;
         padding-bottom: 9px;
-       
+        /* padding-top: 5px; */
     }
 }
 
